--- a/culture.css
+++ b/culture.css
@@ -59,6 +59,15 @@ header {
 
     }
 }
+.burger-menu{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 10px;
+    top: 10PX;
+    z-index: 10;
+    display: none;
+}
 #countdown-container {
     text-align: center;
     margin-top: 20px;
@@ -529,9 +538,47 @@ h2 {
 
 }
 
-
-/* @media(max-width: 900px){
-    p{
+@media (max-width: 900px){
+    .burger-menu {
         display: block;
+        transition: all 1s ease;
+        /* Visible sur les petits écrans */
     }
-} */
+    .navigation{
+        background: none;
+        margin: 0;
+        padding: 0;
+    }
+    .search-container{
+        display: none;
+    }
+    nav{
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        /* backdrop-filter:none; */
+        background-color: rgba(128, 128, 128, 0.186);
+        border: none;
+        width: 50%;
+        height: 100vh;
+        margin-left: -100%;
+        position: absolute;
+        transition: ease-in-out 0.5s;
+        .nav-links{
+            margin: 0;
+            padding: 0;
+            flex-direction: column;
+            align-items: center;
+            justify-content:center;
+            ul{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+}
+.mobile-menu{
+    margin-left:0;
+}
