toutes les pages annexes sont faite et toutes reliées au JS oeuf

--- a/gastronomie/la voliere gourmande.css
+++ b/gastronomie/la voliere gourmande.css
@@ -16,7 +16,7 @@
 header {
     .test {
         background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
-            url(/assets/oeuf\ roti\ bar.png);
+            url(/assets/La_voliere_gourmande.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -149,9 +149,9 @@ header {
     font-style: italic;
 }
 
-h2{
-    text-align: center;
-}
+    h2{
+        text-align: center;
+    }
 
 article {
     display: flex;
