--- a/gastronomie/le coq & la table.css
+++ b/gastronomie/le coq & la table.css
@@ -16,7 +16,7 @@
 header {
     .test {
         background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
-            url(/assets/oeuf\ roti\ bar.png);
+            url(/assets/Le_Coq_et_la_table.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
