--- a/culture.css
+++ b/culture.css
@@ -1,39 +1,39 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif+Georgian:wght@100..900&family=Roboto&display=swap'); */
-*{
+* {
     box-sizing: border-box;
     /* background-color:var(--bgc-f);
     height:100vh;
     width: 100%; */
     margin: 0;
-    padding:0 ;
+    padding: 0;
 
 }
 
-:root{
-    --bgc-f:#1D2A35;
-    --bgc-block:#334A5E;
-    --font-family-h:"Noto Serif Georgian", serif;
-    --font-family-p:"Montserrat", sans-serif;
+:root {
+    --bgc-f: #1D2A35;
+    --bgc-block: #334A5E;
+    --font-family-h: "Noto Serif Georgian", serif;
+    --font-family-p: "Montserrat", sans-serif;
 }
 
-body{
-    background-color:var(--bgc-f);
+body {
+    background-color: var(--bgc-f);
     /* background: linear-gradient(to bottom, #1D2A35, #334a5e); */
-    height:100vh;
+    height: 100vh;
     width: 100%;
 }
 
-header{
+header {
     background: linear-gradient(rgba(228, 123, 123, 0.283), #1d2a35fd),
-    url(./images/bgi.jpg);
+        url(./images/bgi.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     object-fit: cover;
     /* background-attachment: fixed; */
     /* overflow: hidden;  */
-    
+
     max-width: 100%;
     height: 45vh;
     margin-top: 0;
@@ -43,46 +43,179 @@ header{
     justify-content: flex-start;
     align-items: center;
 
-    position:sticky;  
-    top: 0;  
-    z-index:-1; 
+    /* position: sticky;
+    top: 0;
+    z-index: -1; */
 
 
-    h1{
+    h1 {
         /* background-color: #fff; */
         border-radius: 5px;
         backdrop-filter: blur(10px);
         opacity: 100%;
-        font-family:var(--font-family-p);
+        font-family: var(--font-family-p);
         padding-bottom: 5px;
         color: #fff;
-        
+
     }
 }
+#countdown-container {
+    text-align: center;
+    margin-top: 20px;
+}
+#countdown {
+    font-size: 2em;
+    font-weight: bold;
+    color: #ff5733;  /* Couleur vive pour attirer l'attention */
+}
+#countdown-container h2 {
+    font-size: 1.5em;
+    color: #333;
+}
 
-main{
+nav {
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    width: 90vh;
+    padding: 10px 2rem;
+    border-radius: 50px;
+    background-color: rgba(29, 42, 53, 0.7);
+    backdrop-filter: blur(3px);
+    border: 2px solid rgba(44, 89, 128, 0.5);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+    transition: all 0.3s ease;
+    
+}
+
+nav
+
+nav p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+nav a {
+    color: var(--text-color);
+    list-style: none;
+    text-decoration: none;
+}
+
+nav ul {
+    display: flex;
+    gap: 1.5rem;
+    margin-left: 0rem;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    
+}
+
+nav ul a.default {
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+}
+
+nav.shrink ul a.default {
+    text-underline-offset: 5px;
+}
+
+nav ul a:hover {
+    transition: 0.3s;
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+}
+
+nav.shrink ul a:hover {
+    text-underline-offset: 2px;
+}
+
+.search-bar {
+    width: 30vh;
+    margin-right: 0rem;
+    padding: 7px 10px;
+    font-size: 1rem;
+    border: 1px solid var(--border-color, #ccc);
+    border-radius: 25px;
+    outline: none;
+    transition: all 0.1s ease;
+    background-color: rgba(190, 190, 190, 0.171);
+    color: var(--text-color);
+}
+
+nav.shrink .search-bar {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s 0.7s;
+}
+
+.search-bar::placeholder {
+    color: var(--placeholder-color, #aaa);
+    font-style: italic;
+}
+
+.search-icon {
+    position: absolute;
+    right: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
+    pointer-events: none;
+}
+
+nav.shrink .search-icon {
+    right: 1rem;
+}
+
+.search-icon-i {
+    position: absolute;
+    right: 60rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
+}
+
+nav.shrink .search-icon-i {
+    right: 34rem;
+}
+li, a{
+    list-style: none;
+    text-decoration: none;
+}
+
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
     margin: 0 auto;
     gap: 1rem;
-    z-index: 1;
+    /* z-index: 1; */
 
 
-    }
+}
 
 
 /* mes titres */
-h2{
+h2 {
     color: #fff;
     font-family: var(--font-family-h);
-    width:80%;
+    width: 80%;
     margin: 0 auto;
-    
+
 }
+
 /* ma premiere section */
-.one{
+.one {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -90,18 +223,20 @@ h2{
     gap: 1rem;
     background-color: var(--bgc-block);
     border-radius: 10px;
-    border:inset  2px rgba(255, 255, 255, 0.429);
+    border: inset 2px rgba(255, 255, 255, 0.429);
     /* padding:10px 10px; */
     height: auto;
-    width:80%;
+    width: 80%;
     margin: 0 auto;
-    img{
+
+    img {
         width: 50%;
         height: 100%;
-        border-radius: 10px;  
+        border-radius: 10px;
     }
+
     /* box-sizing: border-box; */
-    div{
+    div {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -112,14 +247,15 @@ h2{
         width: 50%;
         margin: 0 auto;
     }
-    p{
+
+    p {
         color: #fff;
         font-size: 0.9rem;
     }
 
 }
 
-.one-x{
+.one-x {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -128,16 +264,16 @@ h2{
     /* background-color: var(--bgc-block); */
     border-radius: 10px;
     /* border:inset  2px rgba(255, 255, 255, 0.429); */
-    padding:5px 5px;
+    padding: 5px 5px;
     height: auto;
-    width:80%;
+    width: 80%;
     margin: 0 auto;
 
     /* box-sizing: border-box; */
-    div{
+    div {
         display: flex;
         flex-direction: column;
-        justify-content:space-around;
+        justify-content: space-around;
         align-items: center;
         background-color: var(--bgc-block);
         gap: 10px;
@@ -146,28 +282,30 @@ h2{
         font-family: var(--font-family-p);
         width: 50%;
         min-height: 250px;
-        border:inset  2px rgba(255, 255, 255, 0.429);
-        &:hover{
+        border: inset 2px rgba(255, 255, 255, 0.429);
+
+        &:hover {
             transition: ease-in-out 0.5s;
             scale: 1.1;
         }
-        img{
-            width:100%;
+
+        img {
+            width: 100%;
             height: 50%;
-            border-radius: 10px;  
+            border-radius: 10px;
         }
-        
-        p{
+
+        p {
             display: none;
             color: #fff;
             font-size: 1rem;
             padding: 5px;
         }
-        
+
     }
 }
 
-.two{
+.two {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -175,18 +313,20 @@ h2{
     gap: 1rem;
     background-color: var(--bgc-block);
     border-radius: 10px;
-    border:inset  2px rgba(255, 255, 255, 0.429);
+    border: inset 2px rgba(255, 255, 255, 0.429);
     /* padding:10px 10px; */
     height: auto;
-    width:80%;
+    width: 80%;
     margin: 0 auto;
-    img{
+
+    img {
         width: 50%;
         height: 100%;
-        border-radius: 10px;  
+        border-radius: 10px;
     }
+
     /* box-sizing: border-box; */
-    div{
+    div {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -197,14 +337,15 @@ h2{
         width: 50%;
         margin: 0 auto;
     }
-    p{
+
+    p {
         color: #fff;
         font-size: 0.9rem;
     }
 }
 
 
-.two-x{
+.two-x {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -213,16 +354,16 @@ h2{
     /* background-color: var(--bgc-block); */
     border-radius: 10px;
     /* border:inset  2px rgba(255, 255, 255, 0.429); */
-    padding:5px 5px;
+    padding: 5px 5px;
     height: auto;
-    width:80%;
+    width: 80%;
     margin: 0 auto;
 
     /* box-sizing: border-box; */
-    div{
+    div {
         display: flex;
         flex-direction: column;
-        justify-content:space-around;
+        justify-content: space-around;
         align-items: center;
         background-color: var(--bgc-block);
         gap: 10px;
@@ -231,40 +372,45 @@ h2{
         font-family: var(--font-family-p);
         width: 50%;
         min-height: 250px;
-        border:inset  2px rgba(255, 255, 255, 0.429);
-        &:hover{
+        border: inset 2px rgba(255, 255, 255, 0.429);
+
+        &:hover {
             transition: ease-in-out 0.5s;
             scale: 1.1;
         }
-        img{
-            width:100%;
+
+        img {
+            width: 100%;
             height: 50%;
-            border-radius: 10px;  
+            border-radius: 10px;
         }
-        
-        p{
+
+        p {
             display: none;
             color: #fff;
             font-size: 1rem;
             padding: 5px;
-            @media(max-width: 900px){
+
+            @media(max-width: 900px) {
                 display: block;
             }
         }
-        
+
     }
 }
 
-@media(max-width: 900px){
-    .one{
+@media(max-width: 900px) {
+    .one {
         display: flex;
         flex-direction: column;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
-            border-radius: 10px; 
+            border-radius: 10px;
         }
-        div{
+
+        div {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -276,22 +422,26 @@ h2{
             margin: 0 auto;
             padding-bottom: 5px;
         }
-        p{
+
+        p {
             color: #fff;
             font-size: 0.9rem;
         }
 
     }
-    .one-x{
+
+    .one-x {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
-            border-radius: 10px; 
+            border-radius: 10px;
         }
-        div{
+
+        div {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -303,7 +453,8 @@ h2{
             margin: 0 auto;
             padding-bottom: 5px;
         }
-        p{
+
+        p {
             color: #fff;
             font-size: 0.9rem;
         }
@@ -313,16 +464,18 @@ h2{
 
 }
 
-@media(max-width: 900px){
-    .two{
+@media(max-width: 900px) {
+    .two {
         display: flex;
         flex-direction: column;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
-            border-radius: 10px; 
+            border-radius: 10px;
         }
-        div{
+
+        div {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -334,22 +487,26 @@ h2{
             margin: 0 auto;
             padding-bottom: 5px;
         }
-        p{
+
+        p {
             color: #fff;
             font-size: 0.9rem;
         }
 
     }
-    .two-x{
+
+    .two-x {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
-            border-radius: 10px; 
+            border-radius: 10px;
         }
-        div{
+
+        div {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -361,7 +518,8 @@ h2{
             margin: 0 auto;
             padding-bottom: 5px;
         }
-        p{
+
+        p {
             color: #fff;
             font-size: 0.9rem;
         }
