essaie d'inclure la navbar

--- a/gastronomie/la voliere gourmande.css
+++ b/gastronomie/la voliere gourmande.css
@@ -13,14 +13,10 @@
     --border-color: rgba(255, 255, 255, 0.429);
 }
 
-.ingredients {
-    font-style: italic;
-}
-
 header {
     .test {
         background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
-            url(/assets/la\ caille\ et\ le\ barman.png);
+            url(/assets/La_voliere_gourmande.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -149,9 +145,13 @@ header {
     }
 }
 
-h2{
-    text-align: center;
+.ingredients {
+    font-style: italic;
 }
+
+    h2{
+        text-align: center;
+    }
 
 article {
     display: flex;
