--- a/gastronomie/gastronomie.css
+++ b/gastronomie/gastronomie.css
@@ -2,7 +2,10 @@
 
 * {
     font-family: "Montserrat", sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
+
 
 :root {
     --color-text: #ffffff;
@@ -36,13 +39,14 @@ header {
         padding-bottom: 100px;
     }
 
+
     nav {
         display: flex;
-        color: var(--couleur3);
+        color: white;
         align-items: center;
         justify-content: space-between;
-        width: 90vh;
-        padding: 10px 2rem;
+        width: 42rem;
+        padding: 0px 2rem;
         border-radius: 50px;
         background-color: rgba(29, 42, 53, 0.7);
         backdrop-filter: blur(3px);
@@ -54,102 +58,123 @@ header {
         transform: translateX(-50%);
         z-index: 10;
         transition: all 0.3s ease;
-        font-family: var(--typoPrincipal);
+        cursor: pointer;
     }
 
-    nav.shrink {
-        width: 60vh;
-        padding: 6px 1rem;
-        border-radius: 25px;
-    }
-
-    nav p {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin: 0;
-    }
-
-    nav a {
-        color: var(--text-color);
+    @media (max-width: 768px) {
+    nav {
+        width: 25rem;
+        padding: 8px 1rem;
+        border-radius: 20px;
     }
 
     nav ul {
-        display: flex;
-        gap: 1.5rem;
-        margin-left: 0rem;
-        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
-    }
-
-    nav ul a.default {
-        color: var(--color-segondary);
-        text-decoration: underline 2px;
-        text-underline-offset: 10px;
-    }
-
-    nav.shrink ul a.default {
-        text-underline-offset: 5px;
-    }
-
-    nav ul a:hover {
-        transition: 0.3s;
-        color: var(--color-segondary);
-        text-decoration: underline 2px;
-        text-underline-offset: 10px;
-    }
-
-    nav.shrink ul a:hover {
-        text-underline-offset: 2px;
+        gap: 1rem;
     }
 
     .search-bar {
-        width: 30vh;
-        margin-right: 0rem;
-        padding: 7px 10px;
-        font-size: 1rem;
-        border: 1px solid var(--border-color, #ccc);
-        border-radius: 25px;
-        outline: none;
-        transition: all 0.1s ease;
-        background-color: rgba(190, 190, 190, 0.171);
-        color: var(--text-color);
-    }
-
-    nav.shrink .search-bar {
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 0.3s ease, visibility 0s 0.7s;
-    }
-
-    .search-bar::placeholder {
-        color: var(--placeholder-color, #aaa);
-        font-style: italic;
+        display: none;
     }
 
     .search-icon {
-        position: absolute;
-        right: 3rem;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 18px;
-        color: white;
-        pointer-events: none;
+        display: none;
+        cursor: pointer;
+    }
+    }
+
+    nav.shrink {
+    width: 30rem;
+    padding: 0px 0.5rem;
+    border-radius: 25px;
+    }
+
+    nav p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0;
+    }
+
+    nav a {
+    color: var(--text-color);
+    }
+
+    nav ul {
+    display: flex;
+    gap: 1.5rem;
+    margin-left: 0rem;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    nav ul a.default {
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a.default {
+    text-underline-offset: 5px;
+    }
+
+    nav ul a:hover {
+    transition: 0.3s;
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a:hover {
+    text-underline-offset: 2px;
+    }
+
+    .search-bar {
+    margin-left: 1rem;
+    padding: 7px 10px;
+    font-size: 1rem;
+    border: 1px solid var(--border-color, #ccc);
+    border-radius: 25px;
+    outline: none;
+    transition: all 0.1s ease;
+    background-color: rgba(190, 190, 190, 0.171);
+    color: var(--text-color);
+    }
+
+    nav.shrink .search-bar {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s 0.7s;
+    }
+
+    .search-bar::placeholder {
+    color: var(--placeholder-color, #aaa);
+    font-style: italic;
+    }
+
+    .search-icon {
+    position: absolute;
+    right: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
+    pointer-events: none;
+    cursor: pointer;
     }
 
     nav.shrink .search-icon {
-        right: 1rem;
+    right: 1rem;
     }
 
     .search-icon-i {
-        position: absolute;
-        right: 60rem;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 18px;
-        color: white;
+    position: absolute;
+    right: 60rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
     }
 
     nav.shrink .search-icon-i {
-        right: 34rem;
+    right: 34rem;
     }
 }
 
@@ -186,6 +211,7 @@ h2 {
 }
 
 .mise_en_avant,
+.mise_en_avant2,
 .volière,
 .poules,
 .coq,
@@ -217,7 +243,8 @@ h2 {
 }
 }
 
-.mise_en_avant {
+.mise_en_avant,
+.mise_en_avant2 {
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -233,7 +260,7 @@ h2 {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    margin-bottom: 20px;
+
 }
 
 .div2, .div3, .div5 {
