--- a/gastronomie/les poules en fete.css
+++ b/gastronomie/les poules en fete.css
@@ -13,14 +13,10 @@
     --border-color: rgba(255, 255, 255, 0.429);
 }
 
-.ingredients {
-    font-style: italic;
-}
-
 header {
     .test {
         background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
-            url(/assets/la\ caille\ et\ le\ barman.png);
+            url(/assets/Les_Poules_en_fete.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -147,6 +143,10 @@ header {
     nav.shrink .search-icon-i {
         right: 34rem;
     }
+}
+
+.ingredients {
+    font-style: italic;
 }
 
 h2{
