--- a/gastronomie/la voliere gourmande.css
+++ b/gastronomie/la voliere gourmande.css
@@ -180,6 +180,11 @@ nav {
 body {
     background-color: #1D2A35 ;
 }
+
+main {
+    margin-bottom: 10rem;
+}
+
 article {
     
     display: flex;
@@ -221,5 +226,21 @@ article {
             background-color: #ffffff;
             color: black;
         }
+    }
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    background-color: #334A5E;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1rem 0rem;
+    margin-bottom: 0;
+    padding: 2rem 0rem;
+
+    p {
+        margin: 0rem;
     }
 }
