--- a/gastronomie/le coq & la table.css
+++ b/gastronomie/le coq & la table.css
@@ -175,6 +175,11 @@ header {
 body {
     background-color: #1D2A35 ;
 }
+
+main{
+    margin-bottom: 10rem;
+}
+
 h2{
     text-align: center;
 }
@@ -219,5 +224,21 @@ article {
             background-color: #ffffff;
             color: black;
         }
+    }
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    background-color: #334A5E;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1rem 0rem;
+    margin-bottom: 0;
+    padding: 2rem 0rem;
+
+    p {
+        margin: 0rem;
     }
 }
