--- a/gastronomie/perchoir du coq.css
+++ b/gastronomie/perchoir du coq.css
@@ -176,6 +176,10 @@ body{
     background-color: #1D2A35 ;
 }
 
+main {
+    margin-bottom: 10rem;
+}
+
 h2{
     text-align: center;
 }
@@ -221,4 +225,20 @@ article {
             color: black;
     }
 }
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    background-color: #334A5E;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1rem 0rem;
+    margin-bottom: 0;
+    padding: 2rem 0rem;
+
+    p {
+        margin: 0rem;
+    }
 }
