--- a/gastronomie/la voliere gourmande.css
+++ b/gastronomie/la voliere gourmande.css
@@ -51,15 +51,15 @@ nav {
     transition: all 0.3s ease;
     cursor: pointer;
     }
-}
+
 
     @media (max-width: 768px) {
     nav {
-        width: 25rem;
-        padding: 8px 1rem;
+        width: 60%;
+
         border-radius: 20px;
     }
-
+}
     nav ul {
         gap: 1rem;
     }
@@ -229,18 +229,19 @@ article {
     }
 }
 
-footer {
-    display: flex;
-    width: 100%;
+footer{
     background-color: #334A5E;
-    align-items: center;
+    width: 100%;
+    height: auto;
+    color: #fff;
+    display: flex;
+    flex-direction:column;
     justify-content: center;
-    flex-direction: column;
-    margin: 1rem 0rem;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 10px 0;
     margin-bottom: 0;
-    padding: 2rem 0rem;
-
-    p {
-        margin: 0rem;
-    }
+    /* margin-top: 1.5rem; */
+    font-family:  "Montserrat", sans-serif;
+    font-size: 0.8rem;
 }
