--- a/gastronomie/le coq & la table.css
+++ b/gastronomie/le coq & la table.css
@@ -3,6 +3,7 @@
 * {
     font-family: "Montserrat", sans-serif;
     color: #ffffff;
+    
     margin: 0;
     padding: 0;
     list-style: none;
@@ -17,7 +18,7 @@
 header {
     .test {
         background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
-            url(/assets/Le_Coq_et_la_table.png);
+            url(/assets/La_voliere_gourmande.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -27,164 +28,165 @@ header {
         position: relative;
         margin-top: 0;
         padding-bottom: 100px;
+        background-color: #1D2A35 ;
     }
 
+nav {
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    width: 42rem;
+    padding: 10px 2rem;
+    border-radius: 50px;
+    background-color: rgba(29, 42, 53, 0.7);
+    backdrop-filter: blur(3px);
+    border: 2px solid rgba(44, 89, 128, 0.5);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    }
+
+
+    @media (max-width: 768px) {
     nav {
-        display: flex;
-        color: white;
-        align-items: center;
-        justify-content: space-between;
-        width: 42rem;
-        padding: 10px 2rem;
-        border-radius: 50px;
-        background-color: rgba(29, 42, 53, 0.7);
-        backdrop-filter: blur(3px);
-        border: 2px solid rgba(44, 89, 128, 0.5);
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-        position: fixed;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 10;
-        transition: all 0.3s ease;
-        cursor: pointer;
-        }
-    }
-    
-        @media (max-width: 768px) {
-        nav {
-            width: 25rem;
-            padding: 8px 1rem;
-            border-radius: 20px;
-        }
-    
-        nav ul {
-            gap: 1rem;
-        }
-    
-        .search-bar {
-            display: none;
-        }
-    
-        .search-icon {
-            display: none;
-            cursor: pointer;
-        }
-        }
-    
-        nav.shrink {
-        width: 27rem;
-        padding: 6px 1rem;
-        border-radius: 25px;
-        }
-    
-        nav p {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin: 0;
-        }
-    
-        nav a {
-        color: var(--text-color);
-        }
-    
-        nav ul {
-        display: flex;
-        gap: 1.5rem;
-        margin-left: 0rem;
-        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
-        }
-    
-        nav ul a.default {
-        color: var(--color-segondary);
-        text-decoration: underline 2px;
-        text-underline-offset: 10px;
-        }
-    
-        nav.shrink ul a.default {
-        text-underline-offset: 5px;
-        }
-    
-        nav ul a:hover {
-        transition: 0.3s;
-        color: var(--color-segondary);
-        text-decoration: underline 2px;
-        text-underline-offset: 10px;
-        }
-    
-        nav.shrink ul a:hover {
-        text-underline-offset: 2px;
-        }
-    
-        .search-bar {
-        width: 30vh;
-        margin-left: 1rem;
-        padding: 7px 10px;
-        font-size: 1rem;
-        border: 1px solid var(--border-color, #ccc);
-        border-radius: 25px;
-        outline: none;
-        transition: all 0.1s ease;
-        background-color: rgba(190, 190, 190, 0.171);
-        color: var(--text-color);
-        }
-    
-        nav.shrink .search-bar {
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 0.3s ease, visibility 0s 0.7s;
-        }
-    
-        .search-bar::placeholder {
-        color: var(--placeholder-color, #aaa);
-        font-style: italic;
-        }
-    
-        .search-icon {
-        position: absolute;
-        right: 3rem;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 18px;
-        color: white;
-        pointer-events: none;
-        cursor: pointer;
-        }
-    
-        nav.shrink .search-icon {
-        right: 1rem;
-        }
-    
-        .search-icon-i {
-        position: absolute;
-        right: 60rem;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 18px;
-        color: white;
-        }
-    
-        nav.shrink .search-icon-i {
-        right: 34rem;
-        }
+        width: 60%;
 
+        border-radius: 20px;
+    }
+}
+    nav ul {
+        gap: 1rem;
+    }
+
+    .search-bar {
+        display: none;
+    }
+
+    .search-icon {
+        display: none;
+        cursor: pointer;
+    }
+    }
+
+    nav.shrink {
+    width: 27rem;
+    padding: 6px 1rem;
+    border-radius: 25px;
+    }
+
+    nav p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0;
+    }
+
+    nav a {
+    color: var(--text-color);
+    }
+
+    nav ul {
+    display: flex;
+    gap: 1.5rem;
+    margin-left: 0rem;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    nav ul a.default {
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a.default {
+    text-underline-offset: 5px;
+    }
+
+    nav ul a:hover {
+    transition: 0.3s;
+    color: var(--color-segondary);
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a:hover {
+    text-underline-offset: 2px;
+    }
+
+    .search-bar {
+    width: 30vh;
+    margin-left: 1rem;
+    padding: 7px 10px;
+    font-size: 1rem;
+    border: 1px solid var(--border-color, #ccc);
+    border-radius: 25px;
+    outline: none;
+    transition: all 0.1s ease;
+    background-color: rgba(190, 190, 190, 0.171);
+    color: var(--text-color);
+    }
+
+    nav.shrink .search-bar {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s 0.7s;
+    }
+
+    .search-bar::placeholder {
+    color: var(--placeholder-color, #aaa);
+    font-style: italic;
+    }
+
+    .search-icon {
+    position: absolute;
+    right: 3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
+    pointer-events: none;
+    cursor: pointer;
+    }
+
+    nav.shrink .search-icon {
+    right: 1rem;
+    }
+
+    .search-icon-i {
+    position: absolute;
+    right: 60rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: white;
+    }
+
+    nav.shrink .search-icon-i {
+    right: 34rem;
+    }
 
 .ingredients {
     font-style: italic;
 }
+
+    h2{
+        text-align: center;
+    }
 body {
     background-color: #1D2A35 ;
 }
 
-main{
+main {
     margin-bottom: 10rem;
 }
 
-h2{
-    text-align: center;
-}
-
 article {
+    
     display: flex;
     align-items: left;
     flex-direction: column;
@@ -227,18 +229,19 @@ article {
     }
 }
 
-footer {
-    display: flex;
-    width: 100%;
+footer{
     background-color: #334A5E;
-    align-items: center;
+    width: 100%;
+    height: auto;
+    color: #fff;
+    display: flex;
+    flex-direction:column;
     justify-content: center;
-    flex-direction: column;
-    margin: 1rem 0rem;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 10px 0;
     margin-bottom: 0;
-    padding: 2rem 0rem;
-
-    p {
-        margin: 0rem;
-    }
+    /* margin-top: 1.5rem; */
+    font-family:  "Montserrat", sans-serif;
+    font-size: 0.8rem;
 }
