--- a/news.css
+++ b/news.css
@@ -1,6 +1,4 @@
-<<<<<<< HEAD
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --couleur1: #1D2A35;
@@ -25,6 +23,7 @@ body {
     color: var(--couleur3);
     height: 100vh;
     width: 100%;
+    
 }
 
 header {
@@ -125,14 +124,16 @@ nav ul a:hover {
 main {
     /* margin-top: 20vh; */
     padding: 20px;
-
+    
 }
 
 h2 {
     color: var(--couleur3);
     text-align: center;
     margin-bottom: 2rem;
+    text-transform: uppercase;
 }
+
 
 .conteneur, .conteneur2, .conteneur3 {
     display: flex;
@@ -188,238 +189,20 @@ p {
 .chantier img, .Poulet img {
     width: 100%;
 }
-=======
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@100..900&display=swap');
-
-body {
-    background-color: #1D2A35;
-
-            header{
-                height: 20%;
-                width: 100%;
-                padding-bottom: 10px;
-                
-                img{
-                    height: 300px;
-                    width: 100%;
-                }
-            }
-        }
-        
-        
-        h2 {
-            color: white;
-        }
-
-        
-        .modèle {  
-    width: 50%;
-}
-  
-.conteneur  {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    background-color: var(--bgc-block);
-    border-radius: 10px;
-    border:inset  2px rgba(255, 255, 255, 0.429);
-    /* padding:10px 10px; */
+footer{
+    background-color: #334A5E;
+    width: 100%;
     height: auto;
-    width:80%;
-    margin: 0 auto;
-                
-
-                article{
-                    display: flex;
-                    background-color:#334A5E;
-                    border: 1px solid white;
-                        
-                    .TP{   
-                        display:flex;
-                        flex-direction: column;
-                        
-                        
-                        
-                        p { 
-                            color:white;
-
-                        }
-                        h3{
-                            color: white;
-                            justify-content: center;
-                        }
-                        
-                }
-            }
-    
-}
-.conteneur2 {     
+    color: #fff;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction:column;
+    justify-content: center;
     align-items: center;
-    gap: 1rem;
-    background-color: var(--bgc-block);
-    border-radius: 10px;
-    border:inset  2px rgba(255, 255, 255, 0.429);
-    /* padding:10px 10px; */
-    height: auto;
-    width:80%;
-    margin: 0 auto;
-
-                article{
-                    display: flex;
-                    background-color:#334A5E;
-                    border: 1px solid white;
-        
-                    .TP2{   
-                        display:flex;
-                        flex-direction: column;
-                        
-                        
-                        
-                        p { 
-                            color:white;
-
-                        }
-                        h3{
-                            color: white;
-                            justify-content: center;
-                        }
-                        
-                }
-            }
-
-
-}
-.conteneur3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    background-color: var(--bgc-block);
-    border-radius: 10px;
-    border:inset  2px rgba(255, 255, 255, 0.429);
-    /* padding:10px 10px; */
-    height: auto;
-    width:80%;
-    margin: 0 auto;
-
-                article{
-                    display: flex;
-                    background-color:#334A5E;
-                    border: 1px solid white;
-                        
-                    .TP3{   
-                        display:flex;
-                        flex-direction: column;
-                        
-                        
-                        
-                        p { 
-                            color:white;
-
-                        }
-                        h3{
-                            color: white;
-                            justify-content: center;
-                        }
-                        
-                }
-            }
-
+    gap: 0.5rem;
+    padding: 10px 0;
+    margin-bottom: 0;
+    /* margin-top: 1.5rem; */
+    font-family:  "Montserrat", sans-serif;
+    font-size: 0.8rem;
 }
 
-
-
-
-
-
-        .conteneur4 {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            gap: 1rem;
-            background-color: var(--bgc-block);
-            border-radius: 10px;
-            border:inset  2px rgba(255, 255, 255, 0.429);
-            /* padding:10px 10px; */
-            height: auto;
-            width:80%;
-            margin: 0 auto;
-            box-sizing: border-box;
-
-                        article{
-                            display: flex;
-                            background-color:#334A5E;
-                            border: 1px solid white;
-                            min-height: 293px;
-                                
-                            .TP4{   
-                                display:flex;
-                                flex-direction: column;
-                                
-                                
-                                
-                                p { 
-                                    color:white;
-
-                                }
-                                h3{
-                                    color: white;
-                                    justify-content: center;
-                                }
-                                .modèle {
-                                    width: 50%;
-                                            
-                                }
-                        }
-                    }
-        }
-        /* .conteneur5 {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            gap: 1rem;
-            background-color: var(--bgc-block);
-            border-radius: 10px;
-            border:inset  2px rgba(255, 255, 255, 0.429);
-            height: auto;
-            width:80%;
-            margin: 0 auto;
-
-                        article{
-                            display: flex;
-                            background-color:#334A5E;
-                            border: 1px solid white;
-                                
-                                        
-                                }
-                            .TP5{   
-                                display:flex;
-                                flex-direction: column;
-
-                                
-                                
-                                
-                                p { 
-                                    color:white;
-
-                                }
-                                h7{
-                                    color:white;
-                                    justify-content: center;
-                                }
-                                
-                        }
-                    } */
-
-            
-                
->>>>>>> dev
